# Functional-Data-Analysis

./: .gitignore  README.md  fpca.py  main.py  pyproject.toml
notebooks/: _tests.ipynb  esa_spacecraf_anomaly.ipynb  esa_spacecraf_anomaly_v2.ipynb  esa_spacecraf_anomaly_v3.ipynb  esa_spacecraf_anomaly_v4.ipynb  esa_spacecraft_anomaly_mini.ipynb  esa_spacecraft_anomaly_v4.ipynb  esa_spacecraft_anomaly_v4_mini.ipynb  experiments.ipynb  ffpca copy.ipynb  ffpca.ipynb  fpca.ipynb  kfpca.ipynb  pca.ipynb
