[project]
name = "functional-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "latex>=0.7.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.6.1",
]
